--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
-    "next": "15.4.6",
+    "next": "^15.4.6",
     "next-mdx-remote": "^5.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "rehype-pretty-code": "^0.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "velite": "^0.2.4",
-    "shiki": "^1.22.0"
+    "shiki": "^1.22.0",
+    "velite": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
