remove uneeded files

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "prebuild": "velite",
@@ -13,7 +16,6 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.6",
     "next": "^15.4.6",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.1.1",
