replace old form with kit form

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Newsletter (ConvertKit form embed action URL)
 NEXT_PUBLIC_CONVERTKIT_FORM_ACTION=
+
+# Server-side ConvertKit API (used by /api/subscribe)
+# Required: your ConvertKit API key and the Form ID to subscribe to
+CONVERTKIT_API_KEY=
+CONVERTKIT_FORM_ID=
